# trackrecords

./: .dockerignore  .env.dist  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: Makefile  Pipfile  pyproject.toml  template.yaml
backend/.aws-sam/: build.toml
backend/config/: settings.py  urls.py
backend/core/: constants.py  dispatchers.py  forms.py  middleware.py  patterns.py
backend/core/management/commands/: import_data.py  wait_for_db.py
backend/core/models/: Abstractions.py  _ManagerStubs.py  _ModelStubs.py  __init__.py  _managers.py  _models.py  _querysets.py  _stubs.py
backend/core/patterns/: events.py  middleware.py
backend/dataset/: admin.py  models.py
backend/dataset/migrations/: 0001_initial.py  0002_alter_exchange_code_alter_market_code_and_more.py  0002_alter_symbol_search_index.py  0002_tempsymbol.py  0003_remove_tempsymbol_long_name_and_more.py  0004_alter_tempsymbol_frontmonth_alter_tempsymbol_naics_and_more.py  0005_alter_tempsymbol_description_and_more.py  0006_alter_tempsymbol_description.py  0007_alter_tempsymbol_description.py  0008_alter_tempsymbol_exchange_and_more.py  0009_alter_exchange_long_name_alter_exchange_short_name_and_more.py  0010_symbol_frontmonth_symbol_naics_symbol_sic.py  0011_rename_listed_market_tempsymbol_market_and_more.py  0012_rename_market_tempsymbol_listed_market_and_more.py  0013_alter_exchange_long_name_alter_market_long_name_and_more.py  0014_alter_tempsymbol_symbol.py
backend/lambdas/: Makefile  Pipfile  orders.py  portfolios.py  positions.py  profiles.py  requirements.txt
backend/membership/: admin.py  models.py  urls.py  views.py
backend/membership/migrations/: 0001_initial.py
backend/scripts/: entrypoint.sh  setup.sh
backend/templates/memberships/: list.html
backend/trackrecord/: admin.py  apps.py  models.py
backend/trackrecord/migrations/: 0001_initial.py  0002_alter_order_portfolio_alter_order_position_and_more.py  0002_alter_portfolio_avg_profit.py  0002_alter_portfolio_code.py  0002_alter_position_trend_type.py  0002_order_limit_price.py  0002_position_real_pnl_position_unreal_pnl.py  0003_alter_portfolio_avg_duration.py  0003_permission.py  0004_alter_permission_actions.py  0004_alter_portfolio_total_cagr_alter_portfolio_win_ratio.py  0005_alter_permission_options.py  0005_alter_position_entry_stamp.py  0006_alter_permission_actions_alter_permission_collection_and_more.py  0006_alter_position_exit_stamp.py  0007_alter_position_entry_stamp_alter_position_exit_stamp.py  0007_permission_enabled_permission_group_and_more.py  0008_alter_portfolio_allowed_roles.py  0008_alter_position_entry_stamp.py  0009_alter_portfolio_allowed_roles.py  0009_alter_position_entry_stamp.py  0010_alter_order_sent_stamp.py  0010_alter_portfolio_allowed_roles.py  0011_alter_permission_options.py  0011_executedorder_unexecutedorder.py  0012_alter_permission_group.py  0012_delete_executedorder_delete_unexecutedorder.py  0013_alter_portfolio_allowed_roles.py  0014_subscription.py
docker/: admin.ini  backend  local.conf
docker/data/: exchange.tsv  naics.tsv  security.tsv  sic.tsv
lambdas/: Makefile  Pipfile  template.yaml
lambdas/src/: orders.py  settings.py
libs/config/: Makefile  pyproject.toml
libs/config/config/: __init__.py  settings.py
libs/vega/: pyproject.toml  setup.py
libs/vega/vega/: constants.py  documentation.py  forms.py
libs/vega/vega/models/: Abstractions.py  _ManagerStubs.py  _ModelStubs.py  __init__.py  _managers.py  _querysets.py  functions.py
projects/backend/: .dockerignore  Makefile  pyproject.toml
projects/backend/configuration/: asgi.py  settings.py  wsgi.py
projects/backend/core/patterns/: dispatchers.py  management.py
projects/backend/dataset/migrations/: 0001_initial.py  0002_alter_exchange_options_alter_market_options_and_more.py
projects/backend/scripts/: entrypoint.sh
projects/backend/trackrecord/migrations/: 0001_initial.py
services/applications/: Makefile  pyproject.toml  samconfig.toml  template.yaml
services/applications/lambdas/: orders.py  portfolios.py  positions.py  profiles.py  requirements.txt  services.py
services/ppp/sam-ppp/: README.md  samconfig.toml  template.yaml
