[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
known_first_party = ["velorem"]
profile = "black"

[tool.poetry]
package-mode = false
description = "stock publishing platform"
name = "valorem"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
config = { path = "libs/config", develop = true }
sam-applications = { path = "services/applications", develop = true }
setuptools = "^75.8.0"
vega = { path = "libs/vega", develop = true }

[tool.poetry.group.dev.dependencies]
black = ">=23.1.0"
flake8 = ">=6.0.0"
isort = ">=5.12.0"
pylint = ">=2.16.3"
pyright = ">=1.1.296"
pytest = ">=7.2.1"
pytest-cov = ">=3.0.0"
toml-sort = ">=0.24.2"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0.1"
poetry-plugin-sort = "*"

[tool.poetry.scripts]
toml-sort = 'toml_sort.cli:cli'

[tool.pylint."messages control"]
disable = "all"
enable = [
    "empty-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
]
ignore = ["__init__.py", "setup.py"]
ignore-paths = ['.*/tests']

[tool.pyright]
reportMissingTypeArgument = true  # Report generic classes used without type arguments
strictListInference = true  # Use union types when inferring types of lists elements, instead of Any
include = ["libs/vega", "services/backend"]
extraPaths = ["libs/config"]

[tool.tomlsort]
all = true
ignore_case = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
