[tool.poetry]
name = "config"
version = "0.0.1"
description = "Common config across project"
authors = ["Josh Martin <denverprogrammer@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../../"
version-pinning-rule = '=='
