[tool.poetry]
name = "config"
version = "0.0.1"
description = "Common config across project"
authors = ["Josh Martin <denverprogrammer@gmail.com>"]
packages = [{include = "config"}]

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../../"
version-pinning-rule = '=='

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
