[tool.poetry]
name = "backend"
version = "0.0.1"
description = "main webserver"
authors = ["Josh Martin <denverprogrammer@gmail.com>"]
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = ">=3.12"
config = { path = "../../libs/config", develop = true }
django = "==5.0"
django-extensions = ">=3.2.1"
djangorestframework = ">=3.14.0"
django-cors-headers = ">=3.13.0"
djangorestframework-simplejwt = ">=5.2.2"
django-subadmin = ">=3.2.1"
psycopg2-binary = ">=2.9"
uvicorn = ">=0.19.0"
gunicorn = ">=20.1.0"
django-admin-interface = ">=0.24.2"
django-more-admin-filters = ">=1.4"
django-cte = ">=1.3.0"
vega = {path = "../../libs/vega", develop = true }
boto3 = ">=1.36.11"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = ">=3.7.0"

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "../../"
version-pinning-rule = '=='

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9.0"